--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -62,6 +62,9 @@
 				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item">
 				<a class="nav-link" href="#"
+					onclick="window.open('html/fileUpload.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=500,height=600');">파일전송</a></li>
+				<li class="nav-item">
+				<a class="nav-link" href="#"
 					onclick="window.open('html/cameraMobile.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=500,height=600');">모바일캠</a></li>
 				<li class="nav-item">
 				<a class="nav-link" href="#"
